[gd_scene load_steps=29 format=3 uid="uid://bimhqjy6lcfe4"]

[ext_resource type="Texture2D" uid="uid://bo8f461pd63ed" path="res://img/bg.png" id="1_uav2x"]
[ext_resource type="Texture2D" uid="uid://c4tylsitw3mfs" path="res://img/player.png" id="2_3qoeu"]
[ext_resource type="Script" path="res://battle.gd" id="3_c3oa2"]
[ext_resource type="Texture2D" uid="uid://cf65aq3wtprsm" path="res://img/enemy.png" id="3_mg233"]
[ext_resource type="Texture2D" uid="uid://y16aa3ll1wba" path="res://img/attack.png" id="5_e8yml"]
[ext_resource type="Texture2D" uid="uid://bwovuld2xsw55" path="res://img/crit/7-removebg-preview.png" id="5_xywv0"]
[ext_resource type="Texture2D" uid="uid://3eqttyl0kdj6" path="res://img/crit/8-removebg-preview.png" id="6_gojda"]
[ext_resource type="Texture2D" uid="uid://c6wqbk5y7oc5h" path="res://img/crit/9-removebg-preview.png" id="7_bfcv1"]
[ext_resource type="Texture2D" uid="uid://cn481g0qbrf8a" path="res://img/crit/10-removebg-preview.png" id="8_5op17"]
[ext_resource type="Texture2D" uid="uid://crh3xwpy84qar" path="res://img/crit/1-removebg-preview.png" id="9_64akf"]
[ext_resource type="Texture2D" uid="uid://b4btvuxq8xjfk" path="res://img/crit/2-removebg-preview.png" id="10_yimm8"]
[ext_resource type="Texture2D" uid="uid://uxvdqvcwtkgb" path="res://img/crit/3-removebg-preview.png" id="11_402f6"]
[ext_resource type="Texture2D" uid="uid://bjj1tp3e7qbx1" path="res://img/crit/4-removebg-preview.png" id="12_1ql2l"]
[ext_resource type="Texture2D" uid="uid://dc5jv2n6p7dfr" path="res://img/crit/5-removebg-preview.png" id="13_l2x4d"]
[ext_resource type="Texture2D" uid="uid://ba3bsoytghl6o" path="res://img/crit/6-removebg-preview.png" id="14_c6oul"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hsm1t"]
bg_color = Color(0.380392, 0.694118, 0.176471, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ruhtg"]
bg_color = Color(0.380392, 0.694118, 0.176471, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwll3"]
atlas = ExtResource("5_e8yml")
region = Rect2(0, 0, 158, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_r564w"]
atlas = ExtResource("5_e8yml")
region = Rect2(158, 0, 158, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cqnj"]
atlas = ExtResource("5_e8yml")
region = Rect2(316, 0, 158, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5dgy"]
atlas = ExtResource("5_e8yml")
region = Rect2(474, 0, 158, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee48c"]
atlas = ExtResource("5_e8yml")
region = Rect2(632, 0, 158, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7d5e"]
atlas = ExtResource("5_e8yml")
region = Rect2(0, 158, 158, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbstw"]
atlas = ExtResource("5_e8yml")
region = Rect2(158, 158, 158, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ev4t"]
atlas = ExtResource("5_e8yml")
region = Rect2(316, 158, 158, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_s688y"]
atlas = ExtResource("5_e8yml")
region = Rect2(474, 158, 158, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_5i5x2"]
atlas = ExtResource("5_e8yml")
region = Rect2(632, 158, 158, 158)

[sub_resource type="SpriteFrames" id="SpriteFrames_wlhfc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_xywv0")
}, {
"duration": 1.0,
"texture": ExtResource("6_gojda")
}, {
"duration": 1.0,
"texture": ExtResource("7_bfcv1")
}, {
"duration": 1.0,
"texture": ExtResource("8_5op17")
}, {
"duration": 1.0,
"texture": ExtResource("9_64akf")
}, {
"duration": 1.0,
"texture": ExtResource("10_yimm8")
}, {
"duration": 1.0,
"texture": ExtResource("11_402f6")
}, {
"duration": 1.0,
"texture": ExtResource("12_1ql2l")
}, {
"duration": 1.0,
"texture": ExtResource("13_l2x4d")
}, {
"duration": 1.0,
"texture": ExtResource("14_c6oul")
}],
"loop": false,
"name": &"crit",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwll3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r564w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cqnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5dgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee48c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7d5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbstw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ev4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s688y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5i5x2")
}],
"loop": false,
"name": &"default",
"speed": 20.0
}]

[node name="Node2D" type="Node2D"]

[node name="bg" type="Sprite2D" parent="."]
position = Vector2(681, 573)
scale = Vector2(2.88, 2.88)
texture = ExtResource("1_uav2x")

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(317, 372)
scale = Vector2(0.664444, 0.664444)
texture = ExtResource("2_3qoeu")

[node name="BigHead267" type="Sprite2D" parent="."]
position = Vector2(321, 854)
scale = Vector2(0.544444, 0.544444)
texture = ExtResource("3_mg233")

[node name="ProgressBar_player" type="ProgressBar" parent="."]
offset_left = 236.0
offset_top = 172.0
offset_right = 401.0
offset_bottom = 210.0
theme_override_styles/fill = SubResource("StyleBoxFlat_hsm1t")
value = 100.0

[node name="ProgressBar_enemy" type="ProgressBar" parent="."]
anchors_preset = -1
anchor_left = 3.449
anchor_top = 0.241
anchor_right = 3.449
anchor_bottom = 0.241
offset_left = 237.0
offset_top = 669.0
offset_right = 402.0
offset_bottom = 707.0
theme_override_styles/fill = SubResource("StyleBoxFlat_ruhtg")
value = 100.0

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="main_script" type="Sprite2D" parent="."]
script = ExtResource("3_c3oa2")

[node name="attack_enemy" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(324, 829)
scale = Vector2(2.41173, 2.41173)
sprite_frames = SubResource("SpriteFrames_wlhfc")
animation = &"crit"
frame = 9
frame_progress = 1.0

[node name="attack_player" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(323, 352)
scale = Vector2(2.16377, 2.16377)
sprite_frames = SubResource("SpriteFrames_wlhfc")
frame = 9
frame_progress = 1.0

[connection signal="timeout" from="Timer" to="main_script" method="_on_timer_timeout"]
[connection signal="animation_finished" from="attack_enemy" to="main_script" method="_on_attack_enemy_animation_finished"]
[connection signal="animation_finished" from="attack_player" to="main_script" method="_on_attack_player_animation_finished"]
